--- a/_includes/site.html
+++ b/_includes/site.html
@@ -44,3 +44,12 @@
         Coming Soon
     </section>
 </section>
+
+<section id="sectionMisc" class="mt-5 mx-4">
+    <div class="row">
+        <div class="form-group">
+            <button id="btnClearSession" class="btn btn-warning mx-1">{{ site.data.strings.misc.clear_session }}</button>
+            <small id="btnClearSessionHelp" class="form-text text-muted">{{ site.data.strings.misc.clear_session_help }}</small>
+        </div>
+    </div>
+</section>
